# EarleyAlgo

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  main.cpp
grammars/: input.txt  test1.txt  test2.txt  test3.txt  test4.txt
include/: Earley.h  Grammar.h  GrammarFetchers.h
src/: Earley.cpp  Grammar.cpp  GrammarFetchers.cpp
tests/: test-earley.cpp  test-fetcher.cpp
words/: longPar.txt
